--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Flight Control App</string>
+
+    <string name="app_name">UWA</string>
+    <string name="action_settings">Settings</string>
+    <string name="disconnected">Disconnected</string>
+    <string name="product_information">Product Information</string>
+    <string name="connection_loose">Status: No Product Connected</string>
+    <string name="sdk_version">DJI SDK Version: 4.4.1</string>
+
+
+    <string name="freq_update_key">frequency</string>
+    <string name="ip_address">address</string>
+    <string name="port">port</string>
+
 </resources>
