--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,38 @@
     <string name="play_pause_button">Pause</string>
     <string name="land_waypoint_string">Land and sample at waypoint</string>
     <string name="sampleTime">Set sampling time(seconds)</string>
+    <string name="flight_config_text">FLIGHT CONFIGURATION</string>
+    <string name="rth_text">RETURN HOME</string>
+    <string name="speed_value_text">Speed: 0 m/s</string>
+    <string name="mission_end_text">MISSION END</string>
+    <string name="no_action_text">NO ACTION</string>
+    <string name="auto_land_text">AUTO LAND</string>
+    <string name="cancel_text">CANCEL</string>
+    <string name="ok_text">OK</string>
+    <string name="app_name_text">UNDERWATER ACOUSTICS</string>
+    <string name="vertical_speed_text">V.S:</string>
+    <string name="hori_speed_text">H.S:</string>
+    <string name="na_text">NA</string>
+    <string name="n_a_text">N/A</string>
+    <string name="dth_text">D:</string>
+    <string name="lat_text">Lat:</string>
+    <string name="lon_text">Lon:</string>
+    <string name="start_btn_text">START</string>
+    <string name="abort_btn_text">ABORT</string>
+    <string name="go_home_btn_text">Go Home</string>
+    <string name="take_off_btn_text">Take off</string>
+    <string name="land_btn_text">Land</string>
+    <string name="height_text">H:</string>
+    <string name="new_mission_image">new mission image</string>
+    <string name="takeoff_image">TODO</string>
+    <string name="land_text">TODO</string>
+    <string name="rth_image_text">TODO</string>
+    <string name="new_mission_text">New Mission</string>
+    <string name="battery_text">-</string>
+    <string name="FC_version_text">No Aircraft</string>
+    <string name="uav_image">TODO</string>
+    <string name="sat_num_text">-</string>
+    <string name="sat_image">TODO</string>
+    <string name="battery_image">TODO</string>
 
 </resources>
