Added second set of waypoints

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="waypoint_altitude_metres">Waypoint Altitude (metres)</string>
     <string name="altitude">Altitude must be less than 100m</string>
     <string name="waypoint_text">Load waypoints</string>
+    <string name="waypoint_alt_text">Load waypoints 2</string>
     <string name="play_pause_button">Pause</string>
     <string name="land_waypoint_string">Land and sample at waypoint</string>
     <string name="sampleTime">Set sampling time(seconds)</string>
